css/master.css
/*RESET*/
body {
    margin: 0;
    font-family: lato, sans-serif;
    font-size: 1.5em;
    width: 100%;
    height: 100%;
    background-color: #1A1C1D;
    color: #ddd5d5;
}
h1, h2 {
    font-weight: normal;
}
h2 {
  font-family: VT323;
  text-align: justify;
  color: white;
  font-size: 1.8em;
  margin-top: 0;
}
h3 {
  font-weight: bold;
  display: inline-block;
  font-size: 1.2em;
}
li {
  list-style: none;
}
a, a:link, a:hover, a:active, a:visited {
  text-decoration: none;
  color: white;
  cursor: pointer;

}
.small-emoji {
  font-size: 0.7em;
}
.overline {
  text-decoration: line-through;
}
/*BASIC PROPERTIES*/
.ctn {
    width: 100%;
    height: 100%;
}
.baby-ctn {
    margin: 0 auto;
    background-color: rgba(0,0,0,0.5);
    position: relative;
    padding-bottom: 2% !important;
}
.no-txt h2 {
  padding: 2.5% 30% 1%;
  margin-top: 0;
}
/*BIO*/
.bio-ctn {
  padding: 5% 30% 2% 30%;
}
#bio {
  padding-top: 5%;
}
.bio p {
  text-align: justify;
  margin: 5px 0;
}
/*LANGUAGES*/
.languages-ctn .col-xs-12 {
  padding-left: 5px;
  padding-right: 5px;
}
/*BACKGROUND & STUDIES*/
.background h2, .studies h2 {
  padding-top: 5.5%;
}
.exp {
  position: relative;
}
.icon-alex img{
  padding: 1px;
}
.glasses {
  width: 20%;
}
.lightning, .union, .friends {
  width: 15%;
  margin-right: 5%;
}
.exp-left, .exp-right{
  display: inline-block;
}
.exp-left {
  width: 40%;
}

/*********MEDIA QUERIES*********/
/*MOBILE*/
@media only screen
and (min-device-width : 320px)
and (max-device-width : 480px) {
  h2 {
    margin-top: 0;
  }
  .baby-ctn {
    padding: 5% 2% 10% 2%;
    padding-bottom: 10% !important;
    background-color: rgba(0,0,0,0.2);
  }
  .no-txt h2 {
    padding: 0;
  }
  .col-md-6 {
    padding-left: 0;
  }
  .exp {
    padding-left:0;
  }
  .exp-left {
    width: 70%;
  }
  .studies {
    margin-top: 15%;
  }

}

